[package]
name = "trnsys_rust_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "trnsys_rust_template"
path = "src/lib.rs"
edition = "2021"
crate-type= ["cdylib"]


[dependencies]


[build-dependencies]
